[package]
name = "passcloud"
version = "0.1.0"
edition = "2021"
authors = ["wengchengjian"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
passwords = "3.1.9"
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"