[package]
name = "passcloud"
version = "1.0.0"
edition = "2021"
authors = ["wengchengjian"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
passwords = "3.1.9"
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
rand = "0.8.5"
rust-crypto = "^0.2"
winres = "0.1.12"
chrono = "0.4.20"
clipboard = "0.5.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"